--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 .text-center {text-align: center}
 
+h2 {color: #333}
+
 p {
     font-size: 30px;
-    background: antiquewhite;
+    background: #333;
+    color: white;
     padding: 20px 15px;
     line-height: 2;
     margin: 50px 0 50px
