--- a/style.css
+++ b/style.css
@@ -1,12 +1,47 @@
-.text-center {text-align: center}
+body {
+    margin: 0
+}
 
-h2 {color: #333}
+.text-center {
+    text-align: center
+}
+
+h2 {
+    margin: 0;
+    padding: 15px;
+    background: #444;
+    color: white
+}
 
 p {
+    position: relative;
+    margin: 0;
     font-size: 30px;
-    background: #333;
+    background: #555;
     color: white;
-    padding: 20px 15px;
-    line-height: 2;
-    margin: 50px 0 50px
+    padding: 50px 15px;
+    line-height: 2
+}
+
+p:before {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 22px;
+    padding: 10px 5px 30px;
+    content: 'This is just a Note!?!';
+    background: antiquewhite;
+    color: #333;
+    width: 200px
+}
+
+p:after {
+    position: absolute;
+    top: 10px;
+    right: 120px;
+    content: '';
+    background: crimson;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px
 }
