--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-body {
-    margin: 0
-}
+body {margin: 0}
 
-.text-center {
-    text-align: center
-}
+.text-center {text-align: center}
 
 h2 {
     margin: 0;
